--- a/app/design/frontend/default/rooja/template/page/html/header.phtml
+++ b/app/design/frontend/default/rooja/template/page/html/header.phtml
@@ -27,28 +27,63 @@
  * @var Mage_Page_Block_Html_Header $this
  */
 ?>
+<?php
+function timeBetweenNowAndDeadline($deadline) {
+    //$deadline = strtotime($deadline);
+	$currentDate = date("U");
+    $diff = $deadline-$currentDate;
+    $seconds = 0;
+    $hours   = 0;
+    $minutes = 0;
 
-<?php /* AM EDIT - Original Magento Code
+    if($diff % 86400 <= 0){$days = $diff / 86400;}  // 86,400 seconds in a day
+    if($diff % 86400 > 0)
+    {
+        $rest = ($diff % 86400);
+        $days = ($diff - $rest) / 86400;
+        if($rest % 3600 > 0)
+        {
+            $rest1 = ($rest % 3600);
+            $hours = ($rest - $rest1) / 3600;
+            if($rest1 % 60 > 0)
+            {
+                $rest2 = ($rest1 % 60);
+            $minutes = ($rest1 - $rest2) / 60;
+            $seconds = $rest2;
+            }
+            else{$minutes = $rest1 / 60;}
+        }
+        else{$hours = $rest / 3600;}
+    }
 
-<div class="header-container">
-    <div class="header">
-        <?php if ($this->getIsHomePage()):?>
-        <h1 class="logo"><strong><?php echo $this->getLogoAlt() ?></strong><a href="<?php echo $this->getUrl('') ?>" title="<?php echo $this->getLogoAlt() ?>" class="logo"><img src="<?php echo $this->getLogoSrc() ?>" alt="<?php echo $this->getLogoAlt() ?>" /></a></h1>
-        <?php else:?>
-        <a href="<?php echo $this->getUrl('') ?>" title="<?php echo $this->getLogoAlt() ?>" class="logo"><strong><?php echo $this->getLogoAlt() ?></strong><img src="<?php echo $this->getLogoSrc() ?>" alt="<?php echo $this->getLogoAlt() ?>" /></a>
-        <?php endif?>
-        <div class="quick-access">
-            <?php echo $this->getChildHtml('topSearch') ?>
-            <p class="welcome-msg"><?php echo $this->getWelcome()?></p>
-            <?php echo $this->getChildHtml('topLinks') ?>
-            <?php echo $this->getChildHtml('store_language') ?>
-        </div>
-        <?php echo $this->getChildHtml('topContainer'); ?>
-    </div>
-</div>
-<?php echo $this->getChildHtml('topMenu') ?>
+    if($days > 0){$days = $days.' days';}
+    else{$days = false;}
+    if($hours > 0){
+		if($days!=false){
+			$hours = ' and '.$hours.' hours ';
+		}
+		else{
+			$hours = $hours.' hours ';
+		}
+	}
+    else{$hours = false;}
+    if($minutes > 0){$minutes = $minutes.' minutes';}
+    else{$minutes = false;}
+    $seconds = $seconds.'s'; // always be at least one second
+	
+	if($days==0 && $hours == 0 && $minutes == 0){
+		return 0;
+	}
+	elseif($days==0 && $hours == 0){
+		return $minutes;
+	}
+	else{
+		return $days.''.$hours;	
+	}
+    
+}
 
-*/ ?>
+?>
 <div id="wrap">
 <header id="mainHeader">
 	<div class="container">
@@ -74,8 +109,8 @@ foreach ($categories as $_category){
 				if (!$c->getSale_start_date() == null) {
 	                $startdate = strtotime(date('y-m-d', strtotime($c->getSale_start_date())) . ' ' . $c->getSale_start_time() . ':00');
 					$enddate = strtotime(date('y-m-d', strtotime($c->getSale_end_date())) . ' ' . $c->getSale_end_time() . ':00');
-					//var_dump($c);
-					if ($enddate > $today && $enddate > $twodays && $startdate < $today) {
+					
+					if (timeBetweenNowAndDeadline($enddate) != 0 && $enddate > $twodays && $startdate < $today) {
 						if ($i == 1) {
 							echo '<li class="navSectTitle">New Sales</li>';
 							echo '<li><a href="'. $c->getURL() .'">' . $c->getName() . '</a></li>';
@@ -97,10 +132,8 @@ foreach ($categories as $_category){
 				if (!$c->getSale_start_date() == null) {
 	                $startdate = date('y-m-d', strtotime($c->getSale_start_date())) . ' ' . $c->getSale_start_time() . ':00';
 					
-					$enddate = strtotime(date('y-m-d', strtotime($c->getSale_end_date())) . ' ' . $c->getSale_end_time() . ':00'); 
-					
-					//var_dump($c);
-					if ($enddate > $today && $enddate < $twodays && $startdate < $today) {
+					$enddate = strtotime(date('y-m-d', strtotime($c->getSale_end_date())) . ' ' . $c->getSale_end_time() . ':00');
+					if (timeBetweenNowAndDeadline($enddate) != 0 && $enddate < $twodays && $startdate < $today) {
 						if ($j == 1) {
 							echo '<li class="navSectTitle">Ending Soon</li>';
 							echo '<li><a href="'. $c->getURL() .'">' . $c->getName() . '</a></li>';
