--- a/skin/frontend/default/rooja/css/styles.css
+++ b/skin/frontend/default/rooja/css/styles.css
@@ -155,7 +155,7 @@ ul,ol         { list-style:none; }
 /* Form Elements */
 input,select,textarea,button { font:12px Arial, Helvetica, sans-serif; vertical-align:middle; color:#000;cursor:pointer; }
 input.input-text,select,textarea { background:#fff; border:1px solid #ddd; }
-input.input-text,textarea { padding:2px; }
+input.input-text,textarea { padding:2px 7px; }
 select { padding:1px; }
 select option { padding-right:10px; }
 select.multiselect option { border-bottom:1px solid #ddd; padding:2px 5px; }
@@ -1097,7 +1097,7 @@ form#discount-coupon-form .discount h2, .shipping h2  {font-size:14px;margin: 0 
 #billing-new-address-form .form-list .field, #shipping-new-address-form .form-list .field{
     width:220px;
 }
-#billing-new-address-form .form-list input.input-text, #shipping-new-address-form .form-list input.input-text{width:200px;}
+#billing-new-address-form .form-list input.input-text, #shipping-new-address-form .form-list input.input-text{width:180px;}
 #billing-new-address-form .form-list li.wide input.input-text, #shipping-new-address-form .form-list li.wide input.input-text{width:425px;}
 #opc-review{display:none;}
 #opc-review.allow{display:block;}
