--- a/app/design/frontend/default/rooja/template/checkout/onepage/shipping.phtml
+++ b/app/design/frontend/default/rooja/template/checkout/onepage/shipping.phtml
@@ -131,7 +131,7 @@ function loggedInShipping()
 	</li>
             
         <?php if ($this->isCustomerLoggedIn() && $this->customerHasAddresses()):?>
-            <input type="checkbox" name="shipping[save_in_address_book]" value="1" title="<?php echo $this->__('Save in address book') ?>" id="shipping:save_in_address_book" onchange="shipping.setSameAsBilling(false);" checked="checked" /> <label for="shipping:save_in_address_book"><?php echo $this->__('Save in address book') ?></label>
+            <li><input type="checkbox" name="shipping[save_in_address_book]" value="1" title="<?php echo $this->__('Save in address book') ?>" id="shipping:save_in_address_book" onchange="shipping.setSameAsBilling(false);" checked="checked" /> <label for="shipping:save_in_address_book"><?php echo $this->__('Save in address book') ?></label></li>
         <?php else:?>
             <li class="no-display"><input type="hidden" name="shipping[save_in_address_book]" value="1" /></li>
         <?php endif;?>
