--- a/app/design/frontend/default/rooja/template/checkout/onepage/shipping.phtml
+++ b/app/design/frontend/default/rooja/template/checkout/onepage/shipping.phtml
@@ -145,9 +145,9 @@ function loggedInShipping()
     <div id="shipping-buttons-container">
   <!-- <a href="#" class="back left" onclick="checkout.back(); return false;">Back</a> -->
 <button type="button" class="form-button right button" onclick="shipping.save()" id="shippingSaveBtn" style="display:none;" ><span>Save &amp; Continue</span></button>
-        <span id="shipping-please-wait" style="opacity:0;filter: alpha(opacity = 0);" class="please-wait">
-            <img src="<?php echo $this->getSkinUrl('images/opc-ajax-loader.gif') ?>" class="v-middle" alt="" /> &nbsp; <?php echo $this->__('Loading next step...') ?> &nbsp;
-        </span>
+       	<span id="shipping-please-wait" class="please-wait" style="display:none;">
+           <img src="<?php echo $this->getSkinUrl('images/opc-ajax-loader.gif') ?>" alt="<?php echo $this->__('Loading next step...') ?>" title="<?php echo $this->__('Loading next step...') ?>" class="v-middle" /> <?php echo $this->__('Loading next step...') ?>
+       </span>
 <div class="clear"></div>
     </div>
     
