--- a/app/design/frontend/default/rooja/template/checkout/onepage/shipping.phtml
+++ b/app/design/frontend/default/rooja/template/checkout/onepage/shipping.phtml
@@ -146,8 +146,7 @@ function loggedInShipping()
   <!-- <a href="#" class="back left" onclick="checkout.back(); return false;">Back</a> -->
 <button type="button" class="form-button right button" onclick="shipping.save()" id="shippingSaveBtn" style="display:none;" ><span>Save &amp; Continue</span></button>
        	<span id="shipping-please-wait" class="please-wait" style="display:none;">
-           <img src="<?php echo $this->getSkinUrl('images/opc-ajax-loader.gif') ?>" alt="<?php echo $this->__('Loading next step...') ?>" title="<?php echo $this->__('Loading next step...') ?>" class="v-middle" /> <?php echo $this->__('Loading next step...') ?>
-       </span>
+           <img src="<?php echo $this->getSkinUrl('images/opc-ajax-loader.gif') ?>" alt="<?php echo $this->__('Loading next step...') ?>" title="<?php echo $this->__('Loading next step...') ?>" class="v-middle" /> Loading Next Step</span>
 <div class="clear"></div>
     </div>
     
