--- a/app/design/frontend/default/rooja/template/checkout/onepage/payment/methods.phtml
+++ b/app/design/frontend/default/rooja/template/checkout/onepage/payment/methods.phtml
@@ -35,7 +35,7 @@
 <?php foreach ($this->getMethods() as $_method): $_code = $_method->getCode() ?>
     <dt>
     <?php if( sizeof($this->getMethods()) > 1 ): ?>
-        <input id="p_method_<?php echo $_code ?>" value="<?php echo $_code ?>" type="radio" name="payment[method]" title="<?php echo $this->htmlEscape($_method->getTitle()) ?>" onclick="payment.switchMethod('<?php echo $_code ?>')"<?php if($this->getSelectedMethodCode()==$_code): ?> checked="checked"<?php endif; ?> class="radio" />
+        <input id="p_method_<?php echo $_code ?>" value="<?php echo $_code ?>" type="radio" name="payment[method]" title="<?php echo $this->htmlEscape($_method->getTitle()) ?>" onclick="payment.switchMethod('<?php echo $_code ?>');billing.save();shipping.save();"<?php if($this->getSelectedMethodCode()==$_code): ?> checked="checked"<?php endif; ?> class="radio" />
     <?php else: ?>
         <span class="no-display"><input id="p_method_<?php echo $_code ?>" value="<?php echo $_code ?>" type="radio" name="payment[method]" checked="checked" class="radio" /></span>
     <?php endif; ?>
