--- a/app/locale/en_US/template/email/contact_form.html
+++ b/app/locale/en_US/template/email/contact_form.html
@@ -1,4 +1,4 @@
-<!--@subject {{var data.subject}}@-->
+<!--@subject [Rooja Contact Form] {{var data.subject}}@-->
 <!--@vars
 {"var data.name":"Sender Name",
 "var data.subject":"Subject",
