--- a/skin/frontend/default/rooja/css/rooja.css
+++ b/skin/frontend/default/rooja/css/rooja.css
@@ -78,16 +78,18 @@ body:before {
 }
 
 #mainNav ul {
-    width: 384px;
+    width: 350px;
 }
 
 #mainNav ul li{
 	display: inline-block;
-	margin-right: 25px;
+	margin-right: 17px;
 	height: 27px;
 	padding: 32px 25px 10px 15px;
 	background: url("../images/icons/arrow-nav-dark.png") no-repeat scroll 90% 50%;
 }
+#mainNav ul li.last{margin-right:0;}
+
 #mainNav ul li:hover{
 	background: url("../images/icons/arrow-nav-white.png") no-repeat  scroll 90% 50%;
 	background-color: #220f26;
