ending soon string to time issue

--- a/app/design/frontend/default/rooja/template/page/homepage.phtml
+++ b/app/design/frontend/default/rooja/template/page/homepage.phtml
@@ -121,7 +121,7 @@ if($_category->getId() !=5){
 						}
 						echo '<a href="'. $c->getURL() .'"><span><img src="/media/catalog/category/'. $c->getImage() .'"></span></a>';
 						echo '<h3><a href="'. $c->getURL() .'">' . $c->getName() . '</a></h3>';
-						echo '<p>'. date('M jS \a\t g:ia', strtotime($enddate)) .'</p>';
+						echo '<p>'. date('M jS \a\t g:ia', $enddate) .'</p>';
 						echo '</article>';
 						$i++;
 					}
