--- a/app/design/frontend/default/rooja/template/catalog/product/view.phtml
+++ b/app/design/frontend/default/rooja/template/catalog/product/view.phtml
@@ -199,14 +199,14 @@ echo '<span>' . $likes = $xml->link_stat->like_count . '</span>';
 					
 			<?php if ((($expired == 1) && (!$categoryIds == null)) || $boutique==1 ) { ?>
 					<section id="productOptions">
-							<?php if($_product->getPrice()!=0.00){ ?>
+							<?php if(!$_product->getSpecialprice()==null){ ?>
 							<p class="startingPrice">Original Price: <strike>Rs. <?php echo number_format($_product->getPrice(), 2) ?></strike></p><?php } ?>
 								<?php if($boutique==0){ ?>
 									<p class="currentPrice">Current Price:<span>
 								<?php } else{ echo '<p class="currentPrice">Price:<span>';}?>
 								<?php if (!$fbprice == null) { ?>
-								<?php echo 'Rs. ' . number_format($fbprice,2); } else { ?>
-								<?php echo 'Rs. ' . number_format($_product->getSpecialprice(), 2); } ?></span></p>
+								<?php echo 'Rs. ' . number_format($fbprice,2); } elseif(!$_product->getSpecialprice()==null) { ?>
+								<?php echo 'Rs. ' . number_format($_product->getSpecialprice(), 2); }else{ echo 'Rs. ' . number_format($_product->getPrice(), 2); } ?></span></p>
 								
 								
 								<a href="#sizeChartCont" class="sizeChart fr">Size Chart</a>
