--- a/app/locale/en_US/template/email/sales/shipment_new.html
+++ b/app/locale/en_US/template/email/sales/shipment_new.html
@@ -1,4 +1,4 @@
-<!--@subject {{var store.getFrontendName()}}: Shipment # {{var shipment.increment_id}} for Order # {{var order.increment_id}} @-->
+<!--@subject Your Rooja.com order has shipped (#{{var order.increment_id}})  @-->
 <!--@vars
 {"store url=\"\"":"Store Url",
 "skin url=\"images/logo_email.gif\" _area='frontend'":"Email Logo Image",
