removed num likes temporarily

--- a/app/design/frontend/default/rooja/template/catalog/product/list.phtml
+++ b/app/design/frontend/default/rooja/template/catalog/product/list.phtml
@@ -62,13 +62,13 @@ echo '<span class="numLeft">'.$stock_count.'</span>';
 			<article class="productCore<?php if(!$_product->isSaleable()){ echo ' soldOut'; } ?>">
 				<?php if($boutique==0){ ?><span class="numLikes">
 				
-				<?php $source_url = $_product->getProductUrl();
+				<?php /*$source_url = $_product->getProductUrl();
 				$source_url = urlencode($source_url);
 				$source_url = str_replace("%3F___SID%3DU", "", $source_url);
 $url = "http://api.facebook.com/restserver.php?method=links.getStats&urls=".$source_url;
 $xml = file_get_contents($url);
 $xml = simplexml_load_string($xml);
-echo $likes = $xml->link_stat->like_count;
+echo $likes = $xml->link_stat->like_count;*/
 ?>
 				
 				</span><?php } ?>
