--- a/app/design/frontend/default/rooja/layout/page.xml
+++ b/app/design/frontend/default/rooja/layout/page.xml
@@ -49,6 +49,7 @@ Default layout, loads most of the pages
 								<action method="addJs"><script>jquery/resetjQuery.js</script></action>
 								<action method="addJs"><script>jquery/jquery.innerfade.js</script></action>
 								<action method="addJs"><script>jquery/jquery.fancybox-1.3.4.pack.js</script></action>
+								<action method="addJs"><script>jquery/jquery.lazyload.mini.js</script></action>
                 <block type="page/js_cookie" name="js_cookies" template="page/js/cookie.phtml"/>
 
                 <action method="addCss"><stylesheet>css/reset.css</stylesheet></action>
