remove lazy load

--- a/app/design/frontend/default/rooja/template/page/html/head.phtml
+++ b/app/design/frontend/default/rooja/template/page/html/head.phtml
@@ -128,7 +128,7 @@ jQuery(document).ready(function(){
   		olark('api.box.expand');
 		return false;
 	});
-	jQuery("img").lazyload();
+	//jQuery("img").lazyload();
 });
 </script>
 <?php date_default_timezone_set('Asia/Calcutta'); ?>
