--- a/app/design/frontend/default/rooja/template/customer/form/login.phtml
+++ b/app/design/frontend/default/rooja/template/customer/form/login.phtml
@@ -111,7 +111,7 @@
 	    
 	    current = next;
 	    next++;
-	    if (next >= $slideshow.length()) {
+	    if (next >= $slideshow.length) {
 	        next = 0;
 	    }
 	    
