--- a/app/design/frontend/default/rooja/template/rewardsref/customer/referral.phtml
+++ b/app/design/frontend/default/rooja/template/rewardsref/customer/referral.phtml
@@ -9,7 +9,7 @@
 <?php echo $this->getMessagesBlock()->getGroupedHtml() ?>
 <?php echo $this->getChildHtml('progress_bar'); ?>
 
-<div class="half-col right"><?php echo $this->getChildHtml('affiliate'); ?></div>
+<div class="half-col left"><?php echo $this->getChildHtml('affiliate'); ?></div>
 <?php echo $this->getChildHtml('refer_form'); ?>
 <?php //echo $this->getChildHtml('preferences'); ?>
 <div class="clear"></div>
