--- a/app/design/frontend/default/rooja/template/rewardsref/customer/referral/invite/plaxo/referral_form.phtml
+++ b/app/design/frontend/default/rooja/template/rewardsref/customer/referral/invite/plaxo/referral_form.phtml
@@ -12,7 +12,7 @@
           </div>
       <?php endif; ?>
 
-<div class="ref-form half-col left">
+<div class="ref-form half-col right">
         <fieldset>
             <h3 class="page-invite-head">Send Invitations</h3>
             <div class="input-box" >
