--- a/app/design/frontend/default/rooja/template/checkout/onepage/shipping_method.phtml
+++ b/app/design/frontend/default/rooja/template/checkout/onepage/shipping_method.phtml
@@ -26,6 +26,7 @@
 ?>
 <form id="co-shipping-method-form" action="">
 <div class="inner-box">
+	<p><strong>Free Shipping on orders more than Rs. 5000</strong></p>
     <div class="default-box" id="checkout-shipping-method-load">
         <?php echo $this->getChildHtml('available') ?>
     </div>
