--- a/skin/frontend/default/rooja/css/styles.css
+++ b/skin/frontend/default/rooja/css/styles.css
@@ -1025,7 +1025,9 @@ form#discount-coupon-form .discount h2, .shipping h2  {font-size:14px;margin: 0 
 .cart .title-buttons .checkout-types li { float:left; margin:0 0 5px 5px; }
 .cart .checkout-types .paypal-or { margin:0 8px; line-height:2.3; }
 .cart .totals .checkout-types .paypal-or { clear:both; display:block; padding:3px 55px 8px 0; line-height:1.0; font-size:11px; }
-
+#checkout-step-shipping_method p{
+    color:#431F4C;
+}
 
 
 /* Shopping Cart Table */
