--- a/skin/frontend/default/rooja/css/styles.css
+++ b/skin/frontend/default/rooja/css/styles.css
@@ -1029,6 +1029,12 @@ form#discount-coupon-form .discount h2, .shipping h2  {font-size:14px;margin: 0 
     color:#431F4C;
 }
 
+a#backToCart{
+    font-size:1.3em;
+    font-weight:bold;
+    margin-top:15px;
+}
+
 
 /* Shopping Cart Table */
 .cart-table .item-msg { font-size:10px; }
