--- a/skin/frontend/default/rooja/css/styles.css
+++ b/skin/frontend/default/rooja/css/styles.css
@@ -1032,7 +1032,9 @@ form#discount-coupon-form .discount h2, .shipping h2  {font-size:14px;margin: 0 
 a#backToCart{
     font-size:1.3em;
     font-weight:bold;
-    margin-top:15px;
+    margin-top:25px;
+    display:block;
+    color:#431F4C;
 }
 
 
