checkout back link style and carat

--- a/app/design/frontend/default/rooja/template/checkout/onepage.phtml
+++ b/app/design/frontend/default/rooja/template/checkout/onepage.phtml
@@ -111,7 +111,7 @@
 	})(jQuery);
 
 </script>
-<a href="/checkout/cart" class="goBack" id="backToCart">Head back to edit your card, add credits or a promo code</a>
+<a href="/checkout/cart" class="goBack" id="backToCart">&lt; Head back to edit your card, add credits or a promo code</a>
 
 <ol class="opc" id="checkoutSteps">
 <?php 
