--- a/app/design/frontend/default/rooja/template/checkout/onepage.phtml
+++ b/app/design/frontend/default/rooja/template/checkout/onepage.phtml
@@ -111,7 +111,9 @@
 	})(jQuery);
 
 </script>
-<a href="/checkout/cart" class="goBack" id="backToCart">&lt; Head back to edit your card, add credits or a promo code</a>
+<h1>Checkout</h1>
+<span class="fr" id="checkoutQuestions">Questions? <a href="/contact">Contact Us</a></span>
+<a href="/checkout/cart" class="goBack clear" id="backToCart">Click here to Edit your Cart, Add Credits or a Promo Code</a>
 
 <ol class="opc" id="checkoutSteps">
 <?php 
