--- a/app/design/frontend/default/rooja/template/checkout/onepage.phtml
+++ b/app/design/frontend/default/rooja/template/checkout/onepage.phtml
@@ -111,7 +111,7 @@
 	})(jQuery);
 
 </script>
-<h1>Checkout</h1>
+<h1 id="checkoutHeader">Checkout</h1>
 <span class="fr" id="checkoutQuestions">Questions? <a href="/contact">Contact Us</a></span>
 <a href="/checkout/cart" class="goBack clear" id="backToCart">Click here to Edit your Cart, Add Credits or a Promo Code</a>
 
