changed name to my bag

--- a/app/design/frontend/default/rooja/template/page/html/footer.phtml
+++ b/app/design/frontend/default/rooja/template/page/html/footer.phtml
@@ -55,7 +55,7 @@
 		<h4>Account</h4>
 		<ul>
 			<li><a href="/customer/account">My Account</a></li>
-			<li><a href="/checkout/cart">My Cart</a></li>
+			<li><a href="/checkout/cart">My Bag</a></li>
 		</ul>
 		</section>
 		<section class="col1 fl noMargin">
